# advanced_robotics

./: .gitignore
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/include/gazebo_msgs/: GetWorldPropertiesResponse.h
catkin_ws/devel/include/gazebo_plugins/: CameraSynchronizerConfig.h
catkin_ws/devel/include/hddl_parser/: hddl_parser.tab.cpp  hddl_parser.tab.hpp  hddl_scanner.yacc.cpp  location.hh
catkin_ws/devel/include/occupancy_grid_utils/: LocalizedCloud.h  NavigationFunction.h  OverlayClouds.h
catkin_ws/devel/include/robot_door_closing/: door_closeAction.h  door_closeActionFeedback.h  door_closeActionGoal.h  door_closeActionResult.h  door_closeFeedback.h  door_closeGoal.h  door_closeResult.h
catkin_ws/devel/include/robot_door_opening/: door_openAction.h  door_openActionFeedback.h  door_openActionGoal.h  door_openActionResult.h  door_openFeedback.h  door_openGoal.h  door_openResult.h
catkin_ws/devel/include/rosplan_dispatch_msgs/: ActionDispatch.h  ActionFeedback.h  CompletePlan.h  DispatchServiceRequest.h  DispatchServiceResponse.h  EsterelPlan.h  EsterelPlanEdge.h  EsterelPlanNode.h  GetPlanningParamsRequest.h  GetPlanningParamsResponse.h  NonBlockingDispatchAction.h  NonBlockingDispatchActionFeedback.h  NonBlockingDispatchActionGoal.h  NonBlockingDispatchActionResult.h  NonBlockingDispatchFeedback.h  NonBlockingDispatchGoal.h  NonBlockingDispatchResult.h  ParsingServiceRequest.h  ParsingServiceResponse.h  PlanAction.h  PlanActionFeedback.h  PlanActionGoal.h  PlanActionResult.h  PlanFeedback.h  PlanGoal.h  PlanResult.h  PlanningServiceRequest.h  PlanningServiceResponse.h  ProblemServiceRequest.h  ProblemServiceResponse.h
catkin_ws/devel/include/rosplan_knowledge_msgs/: DomainAssignment.h  DomainFormula.h  DomainInequality.h  DomainOperator.h  ExprBase.h  ExprComposite.h  GenerateProblemServiceRequest.h  GenerateProblemServiceResponse.h  GetAttributeService.h  GetAttributeServiceRequest.h  GetAttributeServiceResponse.h  GetDomainAttributeServiceRequest.h  GetDomainAttributeServiceResponse.h  GetDomainNameServiceRequest.h  GetDomainNameServiceResponse.h  GetDomainOperatorDetailsServiceRequest.h  GetDomainOperatorDetailsServiceResponse.h  GetDomainOperatorServiceRequest.h  GetDomainOperatorServiceResponse.h  GetDomainPredicateDetailsServiceRequest.h  GetDomainPredicateDetailsServiceResponse.h  GetDomainTypeServiceRequest.h  GetDomainTypeServiceResponse.h  GetEnumerableTypeServiceRequest.h  GetEnumerableTypeServiceResponse.h  GetInstanceService.h  GetInstanceServiceRequest.h  GetInstanceServiceResponse.h  GetMetricService.h  GetMetricServiceRequest.h  GetMetricServiceResponse.h  GetRDDLFluentTypeRequest.h  GetRDDLFluentTypeResponse.h  GetRDDLImmediateRewardRequest.h  GetRDDLImmediateRewardResponse.h  GetRDDLParamsRequest.h  GetRDDLParamsResponse.h  KnowledgeItem.h  KnowledgeQueryService.h  KnowledgeQueryServiceRequest.h  (+17 more)
catkin_ws/devel/include/rosserial_mbed/: SyncGen.h  SyncGenRequest.h  SyncGenResponse.h
catkin_ws/devel/lib/frontier_exploration/: frontier_exploration_node
catkin_ws/devel/lib/g2o_based_mapping/: g2o_based_mapping
catkin_ws/devel/lib/gazebo_plugins/: camera_synchronizer  hokuyo_node  pub_joint_trajectory_test
catkin_ws/devel/lib/gazebo_ros/: spawn_model
catkin_ws/devel/lib/high_level_control/: close_action_interface  move_action_interface  open_action_interface
catkin_ws/devel/lib/image_timestamp_sync/: image_timestamp_sync
catkin_ws/devel/lib/occupancy_grid_utils/: grid_construction_node
catkin_ws/devel/lib/pkgconfig/: exposure_controller.pc  frontier_exploration.pc  g2o_based_mapping.pc  gazebo_dev.pc  gazebo_msgs.pc  gazebo_plugins.pc  gazebo_ros.pc  gazebo_ros_control.pc  high_level_control.pc  image_timestamp_sync.pc  laser_based_localization_pf.pc  lpn_global_path_planner.pc  occupancy_grid_utils.pc  opt_local_planner.pc  robot_control.pc  robot_description.pc  robot_door_closing.pc  robot_door_opening.pc  robot_gazebo.pc  rosplan_action_interface.pc  rosplan_dependencies.pc  rosplan_dispatch_msgs.pc  rosplan_knowledge_base.pc  rosplan_knowledge_msgs.pc  rosplan_planning_system.pc  rosplan_rqt.pc  rosplan_sensing_interface.pc  rosserial_arduino.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_vex_cortex.pc  rosserial_vex_v5.pc  rosserial_windows.pc  rosserial_xbee.pc  (+4 more)
catkin_ws/devel/lib/robot_door_closing/: robot_door_closing_server_node
catkin_ws/devel/lib/robot_door_opening/: robot_door_opening_server_node
catkin_ws/devel/lib/rosplan_planning_system/: chimp_planner_interface  fd_planner_interface  ff_planner_interface  lpg_planner_interface  online_plan_dispatcher  online_planner_interface  panda_planner_interface  pddl_esterel_plan_dispatcher  pddl_esterel_plan_parser  pddl_simple_plan_dispatcher  pddl_simple_plan_parser  popf_planner_interface  pprp_planner_interface  problemInterface  rddlsim_planner_interface  simulatedAction  smt_planner_interface  tfd_planner_interface  upm_planner_interface
catkin_ws/devel/lib/rosserial_client/: make_libraries  make_library.py
catkin_ws/devel/lib/rosserial_embeddedlinux/: make_libraries.py
catkin_ws/src/advanced_robotics_public/: README.md  install
catkin_ws/src/advanced_robotics_public/opt_local_planner/: CMakeLists.txt  README.md  olp_plugin.xml
catkin_ws/src/advanced_robotics_public/opt_local_planner/include/opt_local_planner/: distance_calculations.h  misc.h  obstacles.h  opt_local_planner.h  pose_se2.h
catkin_ws/src/advanced_robotics_public/opt_local_planner/include/opt_local_planner/g2o_types/: base_teb_edges.h  edge_acceleration.h  edge_kinematics.h  edge_obstacle.h  edge_shortest_path.h  edge_time_optimal.h  edge_velocity.h  edge_via_point.h  penalties.h  vertex_pose.h  vertex_timediff.h
catkin_ws/src/advanced_robotics_public/opt_local_planner/launch/: move_base.launch
catkin_ws/src/advanced_robotics_public/opt_local_planner/src/: opt_local_planner.cpp
(+350 files in other folders)
